--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: frontend-container
-        image: durgeshsamariya.azurecr.io/frontend:latest
+        image: aprylleweek08acr.azurecr.iofrontend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
