--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -15,7 +15,17 @@ on:
         description: 'Name of ACR'
         required: true
         default: '<acr_name>'
-
+    workflow_call:
+    inputs:
+      aks_acr_name:
+        required: true
+        type: string
+      aks_resource_group:
+        required: true
+        type: string
+      aks_acr_name:
+        required: true
+        type: string
 jobs:
   deploy_backend:
     runs-on: ubuntu-latest
