--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -27,6 +27,10 @@ on:
       aks_acr_name:
         required: true
         type: string
+    secrets:
+      AZURE_CREDENTIALS:
+        required: true
+        type: string
 
 jobs:
   deploy_backend:
