fix: fix backend cd

--- a/.github/workflows/full-cd.yml
+++ b/.github/workflows/full-cd.yml
@@ -21,3 +21,5 @@ jobs:
       order_api_ip: ${{ needs.deploy_backend.outputs.ORDER_API_IP }}
       aks_cluster_name: 'week08aks'
       aks_resource_group: 'week08-rg'
+    secrets:
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
