--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -38,6 +38,10 @@ on:
       aks_resource_group:
         required: true
         type: string
+    secrets:
+      AZURE_CREDENTIALS:
+        required: true
+
 
 jobs:
   deploy_frontend:
