fix: fix frontend cd

--- a/.github/workflows/full-cd.yml
+++ b/.github/workflows/full-cd.yml
@@ -23,3 +23,4 @@ jobs:
       aks_resource_group: 'week08-rg'
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
