--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -41,6 +41,8 @@ on:
     secrets:
       AZURE_CREDENTIALS:
         required: true
+      AZURE_CONTAINER_REGISTRY:
+        required: true
 
 
 jobs:
