update: fixed backend CI workflow to trigger on push to feature branches

--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -12,7 +12,7 @@ on:
   push:
     branches:
       - main
-      - 'features/**' # Also trigger on feature branches
+      - 'feature/**' # Also trigger on feature branches
     paths: # Only trigger if changes are in backend directories
       - 'backend/**'
       - '.github/workflows/backend_ci.yml' # Trigger if this workflow file changes
