--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -16,6 +16,13 @@ on:
     paths: # Only trigger if changes are in backend directories
       - 'backend/**'
       - '.github/workflows/backend_ci.yml' # Trigger if this workflow file changes
+  
+  pull_request:
+    branches:
+      - main
+    paths: # Only trigger if changes are in backend directories
+      - 'backend/**'
+      - '.github/workflows/backend_ci.yml' # Trigger if this workflow file changes
 
 # Define global environment variables that can be used across jobs
 env:
